--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                      <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                  </div>
             </div>
-            <div>
+            <div class="featured-architect">
                 <img src="images/architect.png" alt="">
                 <button id="Experience-badge" class="btn-primary">
                     <span id="Experience-years">10+Years</span><br>
@@ -136,6 +136,9 @@
 
     </main>
     <footer>
+        <div class="footer">
+            <p class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
 
     </footer>
 </body>
